--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -1189,8 +1189,10 @@ Rather than iterate through all $N$ nodes to find the true neighbors, or step th
 %\includegraphics[width=6.5cm]{../figures/stencils/hash_vs_kdtree_hnx100.png}
 %\includegraphics[width=6.5cm]{../figures/stencils/speedup_hash_vs_kdtree_hnx100.png} \\
 %\includegraphics[width=6.5cm]{../figures/stencils/speedup_hnx100_vs_kdtree_new.png}
-\includegraphics[width=9.5cm]{../figures/stencils/kdtree_old_reg_subsets_4m_stencil_gen_speedup.png}
+
 \includegraphics[width=9.5cm]{../figures/stencils/kdtree_old_reg_subsets_4m_stencil_gen_time.png}
+\includegraphics[width=9.5cm]{../figures/stencils/kdtree_old_reg_subsets_4m_stencil_gen_speedup.png}
+%\includegraphics[width=9.5cm]{../figures/stencils/reg_subsets_4m_stencil_gen_time.png}
 \caption{Querying the $n=50$ nearest neighbors on a regular grid up to $N=160^3$ demonstrates the significant gains achieved by our spatially binned neighbor query. While KDTree queries grow as $O(N log N)$}
 \label{fig:hash_results}
 \end{figure}
@@ -1203,7 +1205,6 @@ Rather than iterate through all $N$ nodes to find the true neighbors, or step th
 \end{figure}
 \begin{figure}
 \centering
-\includegraphics[width=9.5cm]{../figures/stencils/reg_subsets_4m_stencil_gen_time.png}
 \includegraphics[width=9.5cm]{../figures/stencils/sphere_spmv_speedup.png} 
 \caption{Querying the $n=50$ nearest neighbors on a regular grid up to $N=160^3$ demonstrates the significant gains achieved by our spatially binned neighbor query. While KDTree queries grow as $O(N log N)$}
 \label{fig:hash_results}
